--- a/src/components/dialogs/dialogsItem/DialogsItem.module.css
+++ b/src/components/dialogs/dialogsItem/DialogsItem.module.css
@@ -7,7 +7,13 @@
 }
 .dialog a:hover {
     font-weight: bold;
+    cursor: pointer;
 }
-.messages {
-
+.dialog a img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+.dialog a img:hover {
+    cursor: pointer;
 }
