--- a/src/components/users/Users.module.css
+++ b/src/components/users/Users.module.css
@@ -18,3 +18,13 @@
 .usersLocation {
 
 }
+.btnNumb button {
+    display: inline-block;
+    margin: 10px 2px 10px 5px;
+    padding: 0.2rem;
+    height: auto;
+}
+.selectedPage {
+    font-weight: bold;
+    color: black;
+}
