.put update status

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -2,26 +2,35 @@
   display: grid;
   grid-template-columns: 2fr 10fr;
   grid-area: header;
-  background-color: #30c3f0;
+  /*background-color: #30c3f0;*/
 }
 .logo {
-  background: url(https://kitenation.com/wp-content/uploads/2019/03/duotone-squarelogo-1.jpg);
-  background-position: center;
+  background-image: url(https://kitenation.com/wp-content/uploads/2019/03/duotone-squarelogo-1.jpg);
+  background-position: left;
   background-size: contain;
   background-repeat: no-repeat;
   height: 11.8vh;
   margin: 0;
 }
-.background {
-  background: url(https://www.duotonesports.com/fileadmin/user_upload/duotone_kiteboarding_kites_overview_2021_v2.jpg);
+/*.background {
+  background-image: url(https://www.duotonesports.com/fileadmin/user_upload/duotone_kiteboarding_kites_overview_2021_v2.jpg);
+  background-position: center;
   background-size: cover;
+  background-repeat: no-repeat;
   height: 11.8vh;
   margin: 0;
+}*/
+.logoBtn {
+position: absolute;
+  right: 10px;
+  top: 10px;
 }
 .loginBlock {
   text-decoration: none;
-  color: white;
+  color: #000;
+  font-weight: 500;
+  opacity: .6;
 }
 .loginBlock:hover {
-  background-color: #169ccd;
+  opacity: 1;
 }
