--- a/src/components/profile/Profile.module.css
+++ b/src/components/profile/Profile.module.css
@@ -1,1 +1,5 @@
-
+/*.backgroundImage {
+    background: url(https://caribbeankitecruise.com/wp-content/uploads/Duotone-Foil-Video-Infinity.jpg);
+    background-size: cover;
+    height: 50vh;
+}*/
