--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .app-wrapper {
   display: grid;
-  width: auto;
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
   grid-template-areas:
     'header header'
@@ -8,30 +9,28 @@
   grid-template-rows: 90px 1fr;
   grid-template-columns: 2fr 10fr;
   grid-gap: 10px;
+  background-image: url(https://static.scientificamerican.com/sciam/cache/file/30647AC1-B772-4607-BF3C3D43456E7103_source.jpg);
+  background-size: cover;
 }
 .app-wrapper-content {
   grid-area: content;
-  background-color: #30c3f0;
 }
-/*.app-wrapper-content img {
-  width: 1000px;
-}*/
 button {
   padding: 0.7rem 1rem;
   height: 2.7rem;
   display: block;
-  border: 0;
+  border: 1px solid black;
   border-radius: 2px;
   font-weight: 500;
-  background: #1992BC;
-  color: #fff;
+  background: transparent;
+  color: #000;
+  opacity: .6;
   text-decoration: none;
   cursor: pointer;
   text-align: center;
-  transition: background-color 0.5s;
 }
 button:hover {
-  background-color: #169ccd;
+  opacity: 1;
 }
 
 
