--- a/src/components/dialogs/Dialogs.module.css
+++ b/src/components/dialogs/Dialogs.module.css
@@ -12,15 +12,15 @@ display: grid;
     margin-bottom: 1.3rem;
     width: 300px;
     border-radius: 2px;
-    background: #30c3f0;
+    background: transparent;
     border: 1px solid #555;
-    color: #fff;
+    color: #000;
     padding: 0.5rem 1rem;
     line-height: 1.3rem;
 }
 ::-moz-placeholder {
-    color: #fff;
+    color: #000;
 }
 ::-webkit-input-placeholder {
-    color: #fff;
+    color: #000;
 }
