--- a/src/components/common/paginator/Paginator.module.css
+++ b/src/components/common/paginator/Paginator.module.css
@@ -2,9 +2,14 @@
     font-weight: bold;
     color: black;
 }
+.btnNumb,
 .btnNumb button {
     display: inline-block;
     margin: 10px 2px 10px 5px;
     padding: 0.2rem;
-    height: auto;
+    height: 30px;
+    border-radius: 5px;
+}
+.paginator {
+    display: inline-block;
 }
