--- a/src/components/common/formsControl/FormsControl.module.css
+++ b/src/components/common/formsControl/FormsControl.module.css
@@ -1,3 +1,6 @@
+.login {
+    height: 100vh;
+}
 .formControl textarea {
     margin-bottom: 1.3rem;
     width: 300px;
@@ -8,18 +11,71 @@
     padding: 0.5rem 1rem;
     line-height: 1.3rem;
 }
-
+.formControl input {
+    border-radius: 2px;
+    background: transparent;
+    border: 1px solid #555;
+    color: #000;
+    margin-bottom: 1rem;
+    padding: 0.5rem 1rem;
+}
 .formControl.errors input,
 .formControl.errors textarea {
-    border: solid red 4px;
+    border: solid red 2px;
 }
 .formControl.errors span {
     color: red;
 }
 .formError {
-    border: solid red 4px;
     color: red;
-    width: 150px;
+    width: 100vh;
     margin: 5px 0;
     padding: 5px;
+}
+.logoBtn {
+    margin: 1rem 0;
+}
+.checkbox input {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+    margin: 10px 0 0 20px;
+}
+.checkbox__text {
+    position: relative;
+    padding: 0 0 0 60px;
+    cursor: pointer;
+}
+.checkbox__text:before {
+    content: '';
+    position: absolute;
+    top: -4px;
+    left: 0;
+    width: 50px;
+    height: 26px;
+    border-radius: 13px;
+    background: #CDD1DA;
+    box-shadow: inset 0 2px 3px rgba(0,0,0,.2);
+    transition: .2s;
+}
+.checkbox__text:after {
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: 2px;
+    width: 22px;
+    height: 22px;
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0 2px 5px rgba(0,0,0,.3);
+    transition: .2s;
+}
+.checkbox input:checked + .checkbox__text:before {
+    background: #77b1d7;
+}
+.checkbox input:checked + .checkbox__text:after {
+    left: 26px;
+}
+.checkbox input:focus + .checkbox__text:before {
+    box-shadow: inset 0 2px 3px rgba(0,0,0,.2), 0 0 0 3px rgba(0,169,198, 0.7);
 }
