--- a/src/components/common/paginator/Paginator.module.css
+++ b/src/components/common/paginator/Paginator.module.css
@@ -1,15 +1,23 @@
 .selectedPage {
-    font-weight: bold;
+    border: 3px solid #000000;
+    font-weight: bolder;
     color: black;
 }
-.btnNumb,
-.btnNumb button {
+.toggle, .btnNumb button {
     display: inline-block;
     margin: 10px 2px 10px 5px;
     padding: 0.2rem;
-    height: 30px;
-    border-radius: 5px;
+    width: 2rem;
+    height: 2rem;
+    font-size: 1rem;
+    font-weight: bold;
 }
 .paginator {
-    display: inline-block;
+    display: flex;
+}
+.toggle:hover {
+    background-color: rgba(57,78,92, 0.6);
+}
+.btnNumb button:hover {
+    background-color: rgba(57,78,92, 0.6);
 }
